<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Carbon;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('transactions', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')
                ->constrained(table: 'users', indexName: 'user_transaction_id' );
            $table->foreignId('book_id')
                ->constrained(table: 'books', indexName: 'book_transaction_id' );
            $table->dateTime('borrowed_date')->default(Carbon::now());
            $table->dateTime('returned_date')->nullable();
            $table->enum('status',['borrowed', 'returned'])->default('borrowed');
            $table->boolean('penalty')->default(false);
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('transactions');
    }
};
