@startuml
'https://plantuml.com/class-diagram

entity "users" {
*id : number <<generated>>
--
username: varchar (255) <<unique>>
password: varchar (255)
fullName : varchar (255)
}

entity "books" {
*id : number <<generated>>
*code : varchar (20) <<unique>>
--
title : varchar (255)
author : varchar (255)
publisher : varchar (255)
status : enum
}


entity "transactions" {
*id : number <<generated>>
*user_id : number <<FK>>
*book_id : number <<FK>>
--
borrowDate : date
returnDate : date
status : varchar (255)
}


entity "ratings" {
*id : number <<generated>>
*user_id : number <<FK>>
*book_id : number <<FK>>
--
rating : number
}


transactions }|--|| users
transactions }|--|| books
ratings}|--||books




@enduml
